# stepageddon

./: .env.example  .gitignore  ALGORITHMIC_MODE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WHATS_NEW.md  docker-compose.yml  setup.sh
backend/: .env.example  Dockerfile  STEP_ENGINE.md  main.py  pyproject.toml  requirements.txt
backend/audio_storage/: .gitkeep
backend/core/: config.py
backend/modules/step_generator/: __init__.py  audio_analysis.py  difficulty.py  generator.py  patterns.py  pipeline.py  schemas.py
backend/routers/: audio.py  generation.py
backend/services/: __init__.py  algorithmic_generator.py  audio_downloader.py  audio_processor.py  step_generator.py  step_generator_new.py
docs/: COMPARISON.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  jsx-shim.d.ts  main.tsx
frontend/src/app/providers/: AppProvider.tsx
frontend/src/components/: Button.tsx  ErrorBoundary.tsx  ProgressBar.tsx  index.ts
frontend/src/components/ErrorBoundary/: ErrorBoundary.tsx
frontend/src/config/: api.js  api.ts
frontend/src/hooks/: index.ts  useLocalStorage.ts  useToast.ts
frontend/src/lib/: axios.ts
frontend/src/screens/: GameScreen.jsx  LoadingScreen.jsx  MenuScreen.jsx  ReadyScreen.jsx  ResultsScreen.jsx
frontend/src/types/: api.types.ts  common.types.ts  index.ts
frontend/src/utils/: gameConstants.js  scoring.js
(+57 files in other folders)
