[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.115.14",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "soundfile>=0.13.1",
    "spotipy>=2.25.2",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.12.8",
]
